--- a/src/routers/custom_direct.yaml
+++ b/src/routers/custom_direct.yaml
@@ -1,23 +1,18 @@
 payload:
   - "+.accounts.qq.com"
-  - "+.bjsubway.com"
-  - "+.map.gtimg.com"
-  - "+.aq.qq.com"
-  - "+.pr.map.qq.com"
-  - "+.mapapi.qq.com"
-  - "+.ezgif.com"
-  - "+.map.qq.com"
-  - "+.captcha.qq.com"
   - "+.api.steampowered.com"
-  - "+.steamstatic.com"
-  - "+.steamserver.net"
-  - "+.map.wap.qq.com"
+  - "+.aq.qq.com"
+  - "+.bing.com"
+  - "+.bjsubway.com"
+  - "+.captcha.qq.com"
   - "+.cdn.cloudflare.steamstatic.com"
   - "+.cdn.zaonce.net"
   - "+.cm.steampowered.com"
   - "+.cn.bing.com"
   - "+.docs.qq.com"
   - "+.download.pytorch.org"
+  - "+.ezgif.com"
+  - "+.files.pythonhosted.org"
   - "+.find.qq.com"
   - "+.gameinstitute.qq.com"
   - "+.graph.qq.com"
@@ -26,10 +21,21 @@ payload:
   - "+.imgcache.qq.com"
   - "+.international.qq.com"
   - "+.jq.qq.com"
+  - "+.krakenfiles.com"
+  - "+.live.com"
   - "+.mail.qq.com"
+  - "+.map.gtimg.com"
+  - "+.map.qq.com"
+  - "+.map.wap.qq.com"
+  - "+.mapapi.qq.com"
+  - "+.mediafire.com"
+  - "+.megaup.net"
+  - "+.modcdn.io"
   - "+.open.qq.com"
   - "+.p2p.dl.mail.ru"
+  - "+.palworldgame.com"
   - "+.ping.pe"
+  - "+.pr.map.qq.com"
   - "+.ptlogin.qq.com"
   - "+.ptlogin2.qq.com"
   - "+.qinfo.clt.qq.com"
@@ -39,17 +45,20 @@ payload:
   - "+.qwant.com"
   - "+.qwant.com"
   - "+.qzone.qq.com"
+  - "+.readyornotgame.com"
+  - "+.sandstorm.game"
   - "+.sec.qq.com"
   - "+.smart2pay.com"
   - "+.static.prod-my.games"
   - "+.steamcdn-a.akamaihd.net"
   - "+.steamcontent.com"
+  - "+.steamserver.net"
+  - "+.steamstatic.com"
   - "+.store.qq.com"
   - "+.tmall.com"
+  - "+.tvtvgood.com"
   - "+.vip.qq.com"
   - "+.weixin.qq.com"
   - "+.weread.qq.com"
   - "+.wx.qq.com"
   - "+.y.qq.com"
-  - "+.readyornotgame.com"
-  - "+.palworldgame.com"
