--- a/src/routers/custom_select.yaml
+++ b/src/routers/custom_select.yaml
@@ -9,3 +9,8 @@ payload:
   - "+.mc.aloen.to"
   - "+.delivery.mp.microsoft.com"
   - "+.rule34video.com"
+  - "+.playfabapi.com"
+  - "+.thehelldiversgame.com"
+  - "+.gameguard.co.kr"
+  - "+.xbyy.app"
+  - "+.fapforfun.net"
