--- a/src/routers/custom_reject.yaml
+++ b/src/routers/custom_reject.yaml
@@ -1,21 +1,22 @@
 ﻿payload:
-    - "+.jindouyun.com"
-    - "+.adobe.io"
-    - "+.cc-cdn.adobe.com"
-    - "+.jindouyun.com"
-    - "+.asc-appservice.com"
-    - "+.cgi.find.qq.com"
-    - "+.gacloudltd.org"
-    - "+.jike0001.com"
-    - "+.cn-ms.galaxyappstore.com"
-    - "+.galaxystore.ad-survey.com"
-    - "+.unityads.com"
-    - "+.52y.top.com"
-    - "+.adobe.io.com"
-    - "+.adobimg.samsungapps.come.io"
-    - "+.adx.ad-survey.com"
-    - "+.qq.com"
-    - "+.tly.llc"
-    - "+.tdapi.srcgsre.com"
-    - "yacd.haishan.me"
-    - "clash.razord.top"
+  - "+.52y.top.com"
+  - "+.adobe.io.com"
+  - "+.adobe.io"
+  - "+.adobimg.samsungapps.come.io"
+  - "+.adx.ad-survey.com"
+  - "+.asc-appservice.com"
+  - "+.cc-cdn.adobe.com"
+  - "+.cgi.find.qq.com"
+  - "+.clash.razord.top"
+  - "+.cn-ms.galaxyappstore.com"
+  - "+.gacloudltd.org"
+  - "+.galaxystore.ad-survey.com"
+  - "+.gameguardfaq.nprotect.com"
+  - "+.jike0001.com"
+  - "+.jindouyun.com"
+  - "+.jindouyun.com"
+  - "+.qq.com"
+  - "+.tdapi.srcgsre.com"
+  - "+.tly.llc"
+  - "+.unityads.com"
+  - "+.yacd.haishan.me"
