--- a/src/routers/custom_direct.yaml
+++ b/src/routers/custom_direct.yaml
@@ -9,6 +9,7 @@ payload:
   - "+.cdn.zaonce.net"
   - "+.cm.steampowered.com"
   - "+.cn.bing.com"
+  - "+.dious.cc"
   - "+.docs.qq.com"
   - "+.download.pytorch.org"
   - "+.ezgif.com"
@@ -28,8 +29,6 @@ payload:
   - "+.map.qq.com"
   - "+.map.wap.qq.com"
   - "+.mapapi.qq.com"
-  - "+.mediafire.com"
-  - "+.megaup.net"
   - "+.modcdn.io"
   - "+.open.qq.com"
   - "+.p2p.dl.mail.ru"
@@ -43,7 +42,6 @@ payload:
   - "+.qm.qq.com"
   - "+.qun.qq.com"
   - "+.qwant.com"
-  - "+.qwant.com"
   - "+.qzone.qq.com"
   - "+.readyornotgame.com"
   - "+.sandstorm.game"
@@ -51,9 +49,6 @@ payload:
   - "+.smart2pay.com"
   - "+.static.prod-my.games"
   - "+.steamcdn-a.akamaihd.net"
-  - "+.steamcontent.com"
-  - "+.steamserver.net"
-  - "+.steamstatic.com"
   - "+.store.qq.com"
   - "+.tmall.com"
   - "+.tvtvgood.com"
