--- a/src/routers/custom_direct.yaml
+++ b/src/routers/custom_direct.yaml
@@ -10,6 +10,7 @@ payload:
   - "+.cm.steampowered.com"
   - "+.cn.bing.com"
   - "+.dious.cc"
+  - "+.dious.cc"
   - "+.docs.qq.com"
   - "+.download.pytorch.org"
   - "+.ezgif.com"
@@ -18,8 +19,10 @@ payload:
   - "+.gameinstitute.qq.com"
   - "+.graph.qq.com"
   - "+.habo.qq.com"
+  - "+.happymod.com"
   - "+.im.qq.com"
   - "+.imgcache.qq.com"
+  - "+.inmodapk.com"
   - "+.international.qq.com"
   - "+.jq.qq.com"
   - "+.krakenfiles.com"
@@ -30,10 +33,12 @@ payload:
   - "+.map.wap.qq.com"
   - "+.mapapi.qq.com"
   - "+.modcdn.io"
+  - "+.modded-1.com"
   - "+.open.qq.com"
   - "+.p2p.dl.mail.ru"
   - "+.palworldgame.com"
   - "+.ping.pe"
+  - "+.playfabapi.com"
   - "+.pr.map.qq.com"
   - "+.ptlogin.qq.com"
   - "+.ptlogin2.qq.com"
@@ -49,6 +54,8 @@ payload:
   - "+.smart2pay.com"
   - "+.static.prod-my.games"
   - "+.steamcdn-a.akamaihd.net"
+  - "+.steamcontent.com"
+  - "+.steamserver.net"
   - "+.store.qq.com"
   - "+.tmall.com"
   - "+.tvtvgood.com"
@@ -56,4 +63,5 @@ payload:
   - "+.weixin.qq.com"
   - "+.weread.qq.com"
   - "+.wx.qq.com"
+  - "+.xmcl.app"
   - "+.y.qq.com"
