--- a/src/routers/custom_gfw.yaml
+++ b/src/routers/custom_gfw.yaml
@@ -2,11 +2,13 @@ payload:
   - "+.500px.com"
   - "+.500px.org"
   - "+.api.mp3dl.cc"
+  - "+.api.steampowered.com"
   - "+.bing.com"
   - "+.bunkr.su"
   - "+.cdn.iz8qkg.com"
   - "+.cdn.kin6c1.com"
   - "+.cdn.v82u1l.com"
+  - "+.cosplaytele.com"
   - "+.cosplaytele.com"
   - "+.dandanzan.com"
   - "+.delivery.mp.microsoft.com"
@@ -15,6 +17,7 @@ payload:
   - "+.e-hentai.org"
   - "+.exhentai.org"
   - "+.fapforfun.net"
+  - "+.files.pythonhosted.org"
   - "+.gameguard.co.kr"
   - "+.hanime1.me"
   - "+.hath.network"
@@ -24,15 +27,19 @@ payload:
   - "+.kemono.party"
   - "+.mc.aloen.to"
   - "+.mixdrop.co"
+  - "+.mixdrop.is"
+  - "+.modcdn.io"
   - "+.music.youtube.com"
   - "+.mxdcontent.net"
   - "+.rule34video.com"
+  - "+.steamstatic.com"
   - "+.storage-terminal.lc"
   - "+.teraboxcdn.com"
   - "+.terminal.lc"
   - "+.thehelldiversgame.com"
   - "+.uploadhaven.com"
   - "+.xbyy.app"
+  - "+.xxtt.info"
   - "+.xxtt.info"
   - "+.yandex.com"
   - "+.yastatic.net"
