--- a/src/routers/custom_reject.yaml
+++ b/src/routers/custom_reject.yaml
@@ -20,3 +20,6 @@
   - "+.tly.llc"
   - "+.unityads.com"
   - "+.yacd.haishan.me"
+  - "+.adobestats.io"
+  - "+.adobe.io"
+  - "+.tpstelemetry.tencent.com"
