--- a/dotfile/config/helix/config.toml
+++ b/dotfile/config/helix/config.toml
@@ -1,4 +1,4 @@
-theme = "rose_pine_dawn"
+theme = "rose_pine"
 
 [editor]
 mouse = true
@@ -9,11 +9,12 @@ idle-timeout = 210
 auto-save = true
 bufferline = "multiple"
 
+
 [editor.statusline]
 left = ["mode", "spinner","diagnostics"]
 center = ["file-name","separator","spacer","position-percentage"]
 right = ["diagnostics", "selections", "position", "file-encoding", "file-line-ending", "file-type"]
-separator = "││" 
+separator = "││"
 
 [editor.cursor-shape]
 insert = "bar"
@@ -37,14 +38,24 @@ newline = "⏎"
 [editor.indent-guides]
 render = true
 
+
 [keys.insert]
-C-c = "normal_mode"
+C-z = "undo"
+C-y = "redo"
+C-s = ":write"
+C-c = "yank_to_primary_clipboard"
+C-v = "paste_primary_clipboard_after"
 C-left = "move_prev_word_start"
 C-right = "move_next_word_start"
 C-up = "move_line_up"
 C-down = "move_line_down"
 
 [keys.normal]
+C-z = "undo"
+C-y = "redo"
+C-s = ":write"
+C-c = "yank_to_primary_clipboard"
+C-v = "paste_primary_clipboard_after"
 j = "move_line_up"
 k = "move_line_down"
 l = "move_char_right"
