--- a/src/routers/custom_direct.yaml
+++ b/src/routers/custom_direct.yaml
@@ -1,22 +1,25 @@
 payload:
   - "+.accounts.qq.com"
   - "+.api.steampowered.com"
+  - "+.api.xmcl.app"
   - "+.aq.qq.com"
   - "+.bing.com"
   - "+.bjsubway.com"
   - "+.captcha.qq.com"
   - "+.cdn.cloudflare.steamstatic.com"
   - "+.cdn.zaonce.net"
+  - "+.cdn77.org"
   - "+.cm.steampowered.com"
   - "+.cn.bing.com"
   - "+.dious.cc"
-  - "+.dious.cc"
   - "+.docs.qq.com"
   - "+.download.pytorch.org"
+  - "+.e4mc.link"
   - "+.ezgif.com"
   - "+.files.pythonhosted.org"
   - "+.find.qq.com"
   - "+.gameinstitute.qq.com"
+  - "+.googleapis.cn"
   - "+.graph.qq.com"
   - "+.habo.qq.com"
   - "+.happymod.com"
@@ -64,4 +67,5 @@ payload:
   - "+.weread.qq.com"
   - "+.wx.qq.com"
   - "+.xmcl.app"
+  - "+.xn--ngstr-lra8j.com"
   - "+.y.qq.com"
