--- a/src/routers/custom_gfw.yaml
+++ b/src/routers/custom_gfw.yaml
@@ -1,14 +1,15 @@
 payload:
   - "+.500px.com"
   - "+.500px.org"
+  - "+.anicdn.com"
   - "+.api.mp3dl.cc"
   - "+.api.steampowered.com"
   - "+.bing.com"
+  - "+.blob.core.windows.net"
   - "+.bunkr.su"
   - "+.cdn.iz8qkg.com"
   - "+.cdn.kin6c1.com"
   - "+.cdn.v82u1l.com"
-  - "+.cosplaytele.com"
   - "+.cosplaytele.com"
   - "+.dandanzan.com"
   - "+.delivery.mp.microsoft.com"
@@ -16,6 +17,7 @@ payload:
   - "+.dropmefiles.com"
   - "+.e-hentai.org"
   - "+.exhentai.org"
+  - "+.f95zone.to"
   - "+.fapforfun.net"
   - "+.files.pythonhosted.org"
   - "+.gameguard.co.kr"
@@ -40,6 +42,6 @@ payload:
   - "+.uploadhaven.com"
   - "+.xbyy.app"
   - "+.xxtt.info"
-  - "+.xxtt.info"
+  - "+.xxtt.ink"
   - "+.yandex.com"
   - "+.yastatic.net"
